VERSION 1.2.2

REQUEST
* We need different Xref tables, one for each parent type, so hibernate handles well the database mapping
and constraints are enabled for the parent_ac field.


TECHNICAL CHANGES
    * Added 6 new tables, with the same structure than IA_Xref: IA_BioSourceXref, IA_ExperimentXref, IA_ControlledVocabXref, IA_FeatureXref, IA_InteractorXref, IA_PublicationXref